force-app/main/default/objects/Factory__c/Factory__c.object-meta.xml
<CustomObject>
    <label>場所別</label>
    <nameField>
        <displayFormat>MFG-{0000000}</displayFormat>
        <label>場所別番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>