force-app/main/default/objects/Factory__c/fields/CarryingDay__c.field-meta.xml
<CustomField>
    <fullName>CarryingDay__c</fullName>
    <label>機器出荷時期</label>
    <type>Date</type>
</CustomField>