force-app/main/default/objects/Factory__c/fields/CommonRatio01__c.field-meta.xml
<CustomField>
    <fullName>CommonRatio01__c</fullName>
    <formula>IF ( ISBLANK(CommonRatioCalc__c), VALUE(LEFT(TEXT(CommonRatio1__c), FIND(&quot;%&quot;, TEXT(CommonRatio1__c)) -1 )) * 0.01, CommonRatioCalc__c )</formula>
    <label>共通費率（内部用）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>