force-app/main/default/objects/Factory__c/fields/CommonRatioCalc__c.field-meta.xml
<CustomField>
    <fullName>CommonRatioCalc__c</fullName>
    <label>共通費率（計算用）</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>