force-app/main/default/objects/Factory__c/fields/CopyBaseNo__c.field-meta.xml
<CustomField>
    <fullName>CopyBaseNo__c</fullName>
    <displayFormat>CB-{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>場所別コピー元番号</label>
    <type>AutoNumber</type>
</CustomField>