force-app/main/default/objects/Factory__c/fields/CopyBaseNo_txt__c.field-meta.xml
<CustomField>
    <fullName>CopyBaseNo_txt__c</fullName>
    <label>場所別コピー元番号（テキスト）</label>
    <length>20</length>
    <type>Text</type>
</CustomField>