force-app/main/default/objects/Factory__c/fields/DeleteFlag__c.field-meta.xml
<CustomField>
    <fullName>DeleteFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>場所別削除</label>
    <type>Checkbox</type>
</CustomField>