force-app/main/default/objects/Factory__c/fields/EstimatedTotalCP__c.field-meta.xml
<CustomField>
    <fullName>EstimatedTotalCP__c</fullName>
    <formula>ROUND(SR_CP__c  *  Probability__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP×係数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>