force-app/main/default/objects/Factory__c/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <label>製作所</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>神電</fullName>
            </value>
            <value>
                <fullName>神電横浜(鎌IS統）</fullName>
            </value>
            <value>
                <fullName>伊電長崎</fullName>
            </value>
            <value>
                <fullName>本プラ建</fullName>
            </value>
            <value>
                <fullName>北プラ建</fullName>
            </value>
            <value>
                <fullName>中プラ建</fullName>
            </value>
            <value>
                <fullName>西プラ建</fullName>
            </value>
            <value>
                <fullName>九プラ建</fullName>
            </value>
            <value>
                <fullName>伊電</fullName>
            </value>
            <value>
                <fullName>配電</fullName>
            </value>
            <value>
                <fullName>系電</fullName>
            </value>
            <value>
                <fullName>力電</fullName>
            </value>
            <value>
                <fullName>通電</fullName>
            </value>
            <value>
                <fullName>鎌電</fullName>
            </value>
            <value>
                <fullName>名電</fullName>
            </value>
            <value>
                <fullName>京電</fullName>
            </value>
            <value>
                <fullName>C電</fullName>
            </value>
            <value>
                <fullName>MPEC東</fullName>
            </value>
            <value>
                <fullName>MPEC中</fullName>
            </value>
            <value>
                <fullName>MPEC西</fullName>
            </value>
            <value>
                <fullName>MPEC九</fullName>
            </value>
            <value>
                <fullName>MEBS</fullName>
            </value>
            <value>
                <fullName>MEE</fullName>
            </value>
            <value>
                <fullName>他社品調達</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>