force-app/main/default/objects/Factory__c/fields/FactoryKey__c.field-meta.xml
<CustomField>
    <fullName>FactoryKey__c</fullName>
    <externalId>true</externalId>
    <label>場所別識別キー</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>