force-app/main/default/objects/Factory__c/fields/FactoryOwnersDivision__c.field-meta.xml
<CustomField>
    <fullName>FactoryOwnersDivision__c</fullName>
    <formula>TEXT(Owner:User.DepartmentAndDivision__c )</formula>
    <label>所有者の本支社</label>
    <type>Text</type>
</CustomField>