force-app/main/default/objects/Factory__c/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <formula>SR_CP__c  - SRWC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>１．商談粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>