force-app/main/default/objects/Factory__c/fields/J_FieldNmber__c.field-meta.xml
<CustomField>
    <fullName>J_FieldNmber__c</fullName>
    <label>J項番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>