force-app/main/default/objects/Factory__c/fields/LastModifiedDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDateAndTime__c</fullName>
    <label>明細更新日時分秒</label>
    <length>50</length>
    <type>Text</type>
</CustomField>