force-app/main/default/objects/Factory__c/fields/LastModifiedDateInFac__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDateInFac__c</fullName>
    <label>明細最終更新日</label>
    <type>Date</type>
</CustomField>