force-app/main/default/objects/Factory__c/fields/LastModifiedDateInOpportunity__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDateInOpportunity__c</fullName>
    <formula>Opp1__r.LastModifiedDateInOpp__c</formula>
    <label>案件 案件最終更新日</label>
    <type>Date</type>
</CustomField>