force-app/main/default/objects/Factory__c/fields/Latest_Forecast_TC__c.field-meta.xml
<CustomField>
    <fullName>Latest_Forecast_TC__c</fullName>
    <formula>Latest_Forecast_SRWC__c + ( Latest_Forecast_SRWC__c * (VALUE(TEXT( CommonRatio01__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>３．最終予想TC（最新）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>