force-app/main/default/objects/Factory__c/fields/Latest_SR_CP__c.field-meta.xml
<CustomField>
    <fullName>Latest_SR_CP__c</fullName>
    <label>３．SRCP（最新）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>