force-app/main/default/objects/Factory__c/fields/Latest_SRWC__c.field-meta.xml
<CustomField>
    <fullName>Latest_SRWC__c</fullName>
    <label>３．SRWC（最新）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>