force-app/main/default/objects/Factory__c/fields/Latest_TC__c.field-meta.xml
<CustomField>
    <fullName>Latest_TC__c</fullName>
    <formula>Latest_SRWC__c + ( Latest_SRWC__c * (VALUE(TEXT( CommonRatio01__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>３．SRTC（最新）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>