force-app/main/default/objects/Factory__c/fields/Latest_TCPercent__c.field-meta.xml
<CustomField>
    <fullName>Latest_TCPercent__c</fullName>
    <formula>Latest_TC__c / Latest_SR_CP__c</formula>
    <label>３．SRTC率（最新）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>