force-app/main/default/objects/Factory__c/fields/Latest_WCRate__c.field-meta.xml
<CustomField>
    <fullName>Latest_WCRate__c</fullName>
    <formula>Latest_SRWC__c / Latest_SR_CP__c</formula>
    <label>３．SRWC率（最新）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>