force-app/main/default/objects/Factory__c/fields/LostType__c.field-meta.xml
<CustomField>
    <fullName>LostType__c</fullName>
    <formula>TEXT(Opp1__r.LostType__c)</formula>
    <label>案件 失注／削除区分</label>
    <type>Text</type>
</CustomField>