force-app/main/default/objects/Factory__c/fields/MachineCode__c.field-meta.xml
<CustomField>
    <fullName>MachineCode__c</fullName>
    <label>機種コード</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 タービン発電機</fullName>
            </value>
            <value>
                <fullName>10 水車発電機</fullName>
            </value>
            <value>
                <fullName>20 直流発電機</fullName>
            </value>
            <value>
                <fullName>21 直流電動機</fullName>
            </value>
            <value>
                <fullName>30 交流発電機</fullName>
            </value>
            <value>
                <fullName>32 交流電動機</fullName>
            </value>
            <value>
                <fullName>35 車両用電機品</fullName>
            </value>
            <value>
                <fullName>35A1 交流主電動機用部品</fullName>
            </value>
            <value>
                <fullName>35A2 直流主電動機用部品</fullName>
            </value>
            <value>
                <fullName>35A3 駆動装置用部品</fullName>
            </value>
            <value>
                <fullName>35A4 リニアモータ用部品</fullName>
            </value>
            <value>
                <fullName>35B1 推進制御装置用部品</fullName>
            </value>
            <value>
                <fullName>35B2 ＦＬ・誘導分流器部品</fullName>
            </value>
            <value>
                <fullName>35B3 渦電流ブレーキ用部品</fullName>
            </value>
            <value>
                <fullName>35C1 補助電源装置用部品</fullName>
            </value>
            <value>
                <fullName>35D1 モニタ関系部品</fullName>
            </value>
            <value>
                <fullName>35E1  ＡＴＳ／Ｃ／Ｏ用部品</fullName>
            </value>
            <value>
                <fullName>35G1  ＶＩＳ・車上ＩＴ部品</fullName>
            </value>
            <value>
                <fullName>36 送風機</fullName>
            </value>
            <value>
                <fullName>37 その他回転機</fullName>
            </value>
            <value>
                <fullName>39 ホーム柵</fullName>
            </value>
            <value>
                <fullName>40 変圧器</fullName>
            </value>
            <value>
                <fullName>40A 変圧器（受変電用）</fullName>
            </value>
            <value>
                <fullName>40B 変圧器（整流器用）</fullName>
            </value>
            <value>
                <fullName>40C 変圧器（鉄鋼ライン用</fullName>
            </value>
            <value>
                <fullName>40D 変圧器（その他）</fullName>
            </value>
            <value>
                <fullName>41 ＮＣ</fullName>
            </value>
            <value>
                <fullName>42 溶接機</fullName>
            </value>
            <value>
                <fullName>43 産業用ロボット</fullName>
            </value>
            <value>
                <fullName>44 電気加工機</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>