force-app/main/default/objects/Factory__c/fields/MigrationOppNameText__c.field-meta.xml
<CustomField>
    <fullName>MigrationOppNameText__c</fullName>
    <description>3/7 場所別移行データの正常移行を確認するために、場所別移行データ内の案件名テキストを投入するために作成
案件の案件名と場所別案件名を突合せるレポートを作成し、場所別が正常に移行出来ているかを確認する。</description>
    <label>移行確認用案件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>