force-app/main/default/objects/Factory__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>機種</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HG-VG-A</fullName>
            </value>
            <value>
                <fullName>HS-X</fullName>
            </value>
            <value>
                <fullName>HS-A</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>FF</fullName>
            </value>
            <value>
                <fullName>FF-PW</fullName>
            </value>
            <value>
                <fullName>高圧SNW</fullName>
            </value>
            <value>
                <fullName>低圧SNW</fullName>
            </value>
            <value>
                <fullName>高圧盤</fullName>
            </value>
            <value>
                <fullName>MELSAS</fullName>
            </value>
            <value>
                <fullName>保守点検</fullName>
            </value>
            <value>
                <fullName>修繕</fullName>
            </value>
            <value>
                <fullName>据付工事</fullName>
            </value>
            <value>
                <fullName>技術員派遣</fullName>
            </value>
            <value>
                <fullName>9800D</fullName>
            </value>
            <value>
                <fullName>9800E</fullName>
            </value>
            <value>
                <fullName>9300A</fullName>
            </value>
            <value>
                <fullName>2011D</fullName>
            </value>
            <value>
                <fullName>2031R</fullName>
            </value>
            <value>
                <fullName>2133C</fullName>
            </value>
            <value>
                <fullName>2133S</fullName>
            </value>
            <value>
                <fullName>2133L</fullName>
            </value>
            <value>
                <fullName>高圧MPC</fullName>
            </value>
            <value>
                <fullName>低圧MPC</fullName>
            </value>
            <value>
                <fullName>MEG</fullName>
            </value>
            <value>
                <fullName>MSSG</fullName>
            </value>
            <value>
                <fullName>MTG</fullName>
            </value>
            <value>
                <fullName>デュアルフューエル</fullName>
            </value>
            <value>
                <fullName>常用発電機</fullName>
            </value>
            <value>
                <fullName>MELBAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>