force-app/main/default/objects/Factory__c/fields/Opp1__c.field-meta.xml
<CustomField>
    <fullName>Opp1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>案件</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>場所別</relationshipLabel>
    <relationshipName>Opps1</relationshipName>
    <type>Lookup</type>
</CustomField>