force-app/main/default/objects/Factory__c/fields/OpportunityNumber__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNumber__c</fullName>
    <formula>Opp1__r.OpportunityNumber__c</formula>
    <label>案件 商談番号</label>
    <type>Text</type>
</CustomField>