force-app/main/default/objects/Factory__c/fields/OpportunityPickDivision__c.field-meta.xml
<CustomField>
    <fullName>OpportunityPickDivision__c</fullName>
    <formula>TEXT( Opp1__r.PickDivision__c )</formula>
    <label>案件部門</label>
    <type>Text</type>
</CustomField>