force-app/main/default/objects/Factory__c/fields/OppPhase__c.field-meta.xml
<CustomField>
    <fullName>OppPhase__c</fullName>
    <formula>TEXT(Opp1__r.StageName)</formula>
    <label>案件 フェーズ</label>
    <type>Text</type>
</CustomField>