force-app/main/default/objects/Factory__c/fields/OppPrefecture__c.field-meta.xml
<CustomField>
    <fullName>OppPrefecture__c</fullName>
    <formula>Opp1__r.Prefecture__c</formula>
    <label>案件 都道府県名</label>
    <type>Text</type>
</CustomField>