force-app/main/default/objects/Factory__c/fields/Order_Forecast_SRWC__c.field-meta.xml
<CustomField>
    <fullName>Order_Forecast_SRWC__c</fullName>
    <label>２．最終予想WC（受注時）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>