force-app/main/default/objects/Factory__c/fields/Order_Forecast_WCRate__c.field-meta.xml
<CustomField>
    <fullName>Order_Forecast_WCRate__c</fullName>
    <formula>Order_Forecast_SRWC__c / Order_Forecast_SR_CP__c</formula>
    <label>２．最終予想WC率（受注時）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>