force-app/main/default/objects/Factory__c/fields/Order_GP__c.field-meta.xml
<CustomField>
    <fullName>Order_GP__c</fullName>
    <formula>Order_SR_CP__c - Order_SRWC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>２．SR粗利（受注時）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>