force-app/main/default/objects/Factory__c/fields/Order_SR_CP__c.field-meta.xml
<CustomField>
    <fullName>Order_SR_CP__c</fullName>
    <label>２．SRCP（受注時）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>