force-app/main/default/objects/Factory__c/fields/Order_SRInfoUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>Order_SRInfoUpdateDate__c</fullName>
    <label>２．SR情報取得日（受注時）</label>
    <type>Date</type>
</CustomField>