force-app/main/default/objects/Factory__c/fields/Order_SRWC__c.field-meta.xml
<CustomField>
    <fullName>Order_SRWC__c</fullName>
    <label>２．SRWC（受注時）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>