force-app/main/default/objects/Factory__c/fields/Order_TC__c.field-meta.xml
<CustomField>
    <fullName>Order_TC__c</fullName>
    <formula>Order_SRWC__c + (Order_SRWC__c * (VALUE(TEXT( CommonRatio01__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>２．SRTC（受注時）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>