force-app/main/default/objects/Factory__c/fields/Order_TCPercent__c.field-meta.xml
<CustomField>
    <fullName>Order_TCPercent__c</fullName>
    <formula>Order_TC__c / Order_SR_CP__c</formula>
    <label>２．SRTC率（受注時）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>