force-app/main/default/objects/Factory__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <formula>Opp1__r.Probability1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>係数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>