force-app/main/default/objects/Factory__c/fields/Prod__c.field-meta.xml
<CustomField>
    <fullName>Prod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>SBU名で検索頂くと、SBU毎の全ての製品結果を表示できます</inlineHelpText>
    <label>製品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>場所別</relationshipLabel>
    <relationshipName>Factories</relationshipName>
    <type>Lookup</type>
</CustomField>