force-app/main/default/objects/Factory__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <description>3/7 場所別移行データにおける現状機種コード値を格納するために設定。
運用では、経営情報システムへ連携する機種コードを手入力で設定する。</description>
    <label>現状機種コード</label>
    <length>100</length>
    <type>Text</type>
</CustomField>