force-app/main/default/objects/Factory__c/fields/ProductionRequest__c.field-meta.xml
<CustomField>
    <fullName>ProductionRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>生産織込み希望</label>
    <type>Checkbox</type>
</CustomField>