force-app/main/default/objects/Factory__c/fields/Result_AdditionalCost__c.field-meta.xml
<CustomField>
    <fullName>Result_AdditionalCost__c</fullName>
    <label>４．追加原価</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>