force-app/main/default/objects/Factory__c/fields/Result_FinalWC__c.field-meta.xml
<CustomField>
    <fullName>Result_FinalWC__c</fullName>
    <formula>Result_SRWC__c + Result_AdditionalCost__c +  Result_Difference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>売上実績WC＋締切差異＋追加原価</inlineHelpText>
    <label>４．最終WC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>