force-app/main/default/objects/Factory__c/fields/Result_GP__c.field-meta.xml
<CustomField>
    <fullName>Result_GP__c</fullName>
    <formula>Result_SR_CP__c  - Result_SRWC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>４．売上実績粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>