force-app/main/default/objects/Factory__c/fields/Result_SR_CP__c.field-meta.xml
<CustomField>
    <fullName>Result_SR_CP__c</fullName>
    <label>４．売上実績CP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>