force-app/main/default/objects/Factory__c/fields/Result_SRInfoUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>Result_SRInfoUpdateDate__c</fullName>
    <label>４．SR情報最新取得日</label>
    <type>Date</type>
</CustomField>