force-app/main/default/objects/Factory__c/fields/Result_TC__c.field-meta.xml
<CustomField>
    <fullName>Result_TC__c</fullName>
    <formula>Result_SRWC__c + ( Result_SRWC__c * (VALUE(TEXT( CommonRatio01__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>４．売上実績TC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>