force-app/main/default/objects/Factory__c/fields/Result_TCPercent__c.field-meta.xml
<CustomField>
    <fullName>Result_TCPercent__c</fullName>
    <formula>Result_TC__c / Result_SR_CP__c</formula>
    <label>４．売上実績TC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>