force-app/main/default/objects/Factory__c/fields/Result_WCRate__c.field-meta.xml
<CustomField>
    <fullName>Result_WCRate__c</fullName>
    <formula>Result_SRWC__c / Result_SR_CP__c</formula>
    <label>４．売上実績WC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>