force-app/main/default/objects/Factory__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <formula>TEXT(Opp1__r.SBU__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBU</label>
    <type>Text</type>
</CustomField>