force-app/main/default/objects/Factory__c/fields/SR_CP__c.field-meta.xml
<CustomField>
    <fullName>SR_CP__c</fullName>
    <label>１．商談CP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>