force-app/main/default/objects/Factory__c/fields/TC__c.field-meta.xml
<CustomField>
    <fullName>TC__c</fullName>
    <description>WC＋（WC＊共通比率）</description>
    <formula>SRWC__c  +  ( SRWC__c  *  (VALUE(TEXT( CommonRatio01__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>１．商談TC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>