force-app/main/default/objects/Factory__c/fields/TCPercent__c.field-meta.xml
<CustomField>
    <fullName>TCPercent__c</fullName>
    <formula>TC__c  /  SR_CP__c</formula>
    <label>１．商談TC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>