force-app/main/default/objects/Factory__c/fields/TotalCP__c.field-meta.xml
<CustomField>
    <fullName>TotalCP__c</fullName>
    <formula>Opp1__r.TotalCP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>案件 １.商談CP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>