force-app/main/default/objects/Factory__c/fields/TotalCPForReporting__c.field-meta.xml
<CustomField>
    <fullName>TotalCPForReporting__c</fullName>
    <formula>Opp1__r.TotalCPForReporting__c</formula>
    <label>案件 発行CP一致フラグ</label>
    <type>Checkbox</type>
</CustomField>