force-app/main/default/objects/Factory__c/fields/TotalScheduledCollectionAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalScheduledCollectionAmount__c</fullName>
    <formula>Opp1__r.TotalScheduledCollectionAmount__c</formula>
    <label>案件 回収予定金額一致フラグ</label>
    <type>Checkbox</type>
</CustomField>