force-app/main/default/objects/Factory__c/fields/TotalWCForReporting__c.field-meta.xml
<CustomField>
    <fullName>TotalWCForReporting__c</fullName>
    <formula>Opp1__r.TotalWCForReporting__c</formula>
    <label>案件 発行WC一致フラグ</label>
    <type>Checkbox</type>
</CustomField>