force-app/main/default/objects/Factory__c/fields/WCRate__c.field-meta.xml
<CustomField>
    <fullName>WCRate__c</fullName>
    <formula>SRWC__c  /  SR_CP__c</formula>
    <label>１．商談WC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>